Привет! Правки внесла

--- a/catalog.html
+++ b/catalog.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>Каталог — Барбершоп «Бородинский»</title>
+  <title>Каталог  Седона</title>
 </head>
 
 <body>
@@ -10,7 +10,7 @@
 <header>
   <nav>
     <a href="index.html">
-      <img src="img/logo.svg" width="111" height="24" alt="Логотип барбершопа «Бородинский»">
+      <img src="img/logo.svg"  width="138" height="70" alt="logo">
     </a>
     <ul>
         <li><a href="blank.html">Информация</a></li>
@@ -52,7 +52,7 @@
             </li>
             <li>
                 <input type="checkbox" name="motel" id="filter-motel" checked>
-                <label for="filter-motel" >Мотель</label>
+                <label for="filter-motel">Мотель</label>
               </li>
               <li>
                 <input type="checkbox" name="apartaments" id="filter-apartaments" checked>
@@ -72,17 +72,26 @@
         <button type="submit">Показать</button>
       </form>
   </section>
-
   <section>
   <h2>Сортировка отелей</h2>
   <h2>Найдено:3 </h2>
-  <p>Сортировка</p>
-  <button type="button">По цене:</button>
-  <button type="button">По типу:</button>
-  <button type="button">По рейтингу:</button>
+  <ul>
+    <p>Сортировка</p>
+    <li>
+      <a href="">По цене:</a>
+    </li>
+    <li>
+      <a href="">По типу:</a>
+    </li>
+    <li>
+      <a href="">По рейтингу:</a>
+    </li>
+  </ul>
+  </section>
+  <div> 
   <button type="button">По возрастанию</button>
   <button type="button">По убыванию</button>
-  </section>
+</div>
   <section>
     <h2>Список отелей</h2>
     <ul>
@@ -96,13 +105,12 @@
         <a href="#">Подробнее</a>
         <p>
           <button type="button">Забронировать</button>
-          <!-- Тут будут звезды-->
-          <p> Рейтинг: 8,5</p>
+          <img src="img/4stars.svg" alt="4 звезды">
+          <p>Рейтинг: 8,5</p>
         </p>
       </li>
-
       <li>
-        <a href="product.html">
+        <a href="#">
           <h3>Desert Quail Inn</h3>
           <p><img src="img/DesertQuailInn.jpg" width="135" height="90" alt="Мотель Desert Quail Inn"></p>
         </a>
@@ -111,11 +119,10 @@
         <a href="#">Подробнее</a>
         <p>
           <button type="button">Забронировать</button>
-          <!-- Тут будут звезды-->
+          <img src="img/3stars.svg" alt="3 звезды">
           <p> Рейтинг: 8,9</p>
         </p>
       </li>
-
       <li>
         <a href="product.html">
           <h3>Villas at Poco Diablo</h3>
@@ -126,7 +133,7 @@
         <a href="#">Подробнее</a>
         <p>
           <button type="button">Забронировать</button>
-          <!-- Тут будут звезды-->
+          <img src="img/2stars.svg" alt="2 звезды">
           <p> Рейтинг: 9,2</p>
         </p>
       </li>
