--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
+    <link rel="icon" href="favicon.ico">
   </head>
   <body>
 
@@ -34,21 +35,24 @@
          <h3>Настоящий городок</h3>
          <span> №1 </span>
          <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p> 
-         <img src="img/sedonacity.png" alt="city">
+         <img src="img/sedonacity.png" width="800" height="256" alt="city">
        </li>
         <article>
           <h2>Приемущества города</h2>
           <ul>
             <li>
               <h3>Жильё</h3>
+              <img src="img/iconHome.svg"   width="75" height="72" alt="Home icon">
               <p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
              </li>
             <li>
               <h3>Еда</h3>
+              <img src="img/iconFood.svg"   width="64" height="77" alt="Food icon">
               <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
              </li>
             <li>
               <h3>Сувениры</h3>
+              <img src="img/iconPresents.svg"   width="75" height="72" alt="Present icon">
               <p>Не только китайского, но и местного производства!</p>
              </li>
           </ul>
@@ -57,7 +61,7 @@
          <h3>Там есть Мост дьявола</h3>
          <span> №2 </span>
          <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p> 
-         <img src="img/devilbridge.png" alt="devil-bridge">
+         <img src="img/devilbridge.png" width="800" height="256" alt="devil-bridge">
        </li>
 
        <li>
