Подключены изображения и фавиконки

--- a/catalog.html
+++ b/catalog.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Каталог  Седона</title>
+  <link rel="icon" href="favicon.ico">
 </head>
 
 <body>
@@ -78,13 +79,13 @@
   <ul>
     <p>Сортировка</p>
     <li>
-      <a href="">По цене:</a>
+      <a href="#">По цене:</a>
     </li>
     <li>
-      <a href="">По типу:</a>
+      <a href="#">По типу:</a>
     </li>
     <li>
-      <a href="">По рейтингу:</a>
+      <a href="#">По рейтингу:</a>
     </li>
   </ul>
   </section>
