Стилизация внутренней страницы

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </nav>
     </header>
     
-    <main class="container">
+    <main class="main-container">
       <div class="welcome">
         <h1>Седона</h1>
         <img class="welcome-text" src="img/Welcome.svg" width="457" height="351" alt="Текст приветствия">
