--- a/catalog.html
+++ b/catalog.html
@@ -4,16 +4,19 @@
   <meta charset="UTF-8">
   <title>Каталог  Седона</title>
   <link rel="icon" href="favicon.ico">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&display=swap&subset=cyrillic-ext">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
 
-<header>
-  <nav>
-    <a href="index.html">
+<header class="main-header">
+  <nav class="main-navigation">
+    <a class="main-header-logo" href="index.html">
       <img src="img/logo.svg"  width="138" height="70" alt="logo">
     </a>
-    <ul>
+    <ul class="site-navigation">
         <li><a href="blank.html">Информация</a></li>
         <li><a href="catalog.html">Фото и видео</a></li>
         <li><a href="map.html">Карта штата</a></li>
@@ -24,12 +27,12 @@
 <main>
  <h1>Отели Седона</h1>
  
-  <section>
+  <section class="hotel-filters">
       <h2>Фильтр Отелей</h2>
-      <form method="get" action="https://echo.htmlacademy.ru">
-        <fieldset>
-          <legend>Инфраструктура:</legend>
-          <ul>
+      <form class="filteres-form" method="get" action="https://echo.htmlacademy.ru">
+        <fieldset class="fieldset-filters">
+          <legend class="legend-filters">Инфраструктура:</legend>
+          <ul class="list-filters">
             <li>
               <input type="checkbox" name="pool" id="filter-pool" checked>
               <label for="filter-pool">Басейн</label>
@@ -44,9 +47,9 @@
               </li>
           <ul>
         </fieldset>
-        <fieldset>
-          <legend>Тип жилья:</legend>
-          <ul>
+        <fieldset class="fieldset-filters">
+          <legend class="legend-filters">Тип жилья:</legend>
+          <ul class="list-filters">
             <li>
               <input type="checkbox" name="hotel" id="filter-hotel" checked>
               <label for="filter-hotel">Гостинница</label>
@@ -61,88 +64,88 @@
               </li>
           <ul>
         </fieldset>
-        <fieldset>
-            <legend>Стоимост в сутки, ₽:</legend>
+        <fieldset class="fieldset-filters">
+            <legend class="legend-filters">Стоимост в сутки, ₽:</legend>
               <span>от</span>
               <input id="min-cost" value="0" type="text">
               <span>до</span>
               <input id="max-сost" value="3000" type="text">
-              <input type="range" min="0" max="3000" step="1" value="50"> 
+              <input class="scala" type="range" min="0" max="3000" step="1" value="50"> 
            </div> 
           </fieldset>
-        <button type="submit">Показать</button>
+        <button class="show-button" type="submit">Показать</button>
       </form>
   </section>
-  <section>
+  <section class="results">
   <h2>Сортировка отелей</h2>
   <h2>Найдено:3 </h2>
-  <ul>
-    <p>Сортировка</p>
-    <li>
+  <ul class="result-sorting">
+    <p class="result-title">Сортировка</p>
+    <li class="result-selected">
       <a href="#">По цене:</a>
     </li>
-    <li>
+    <li  class="result-selected">
       <a href="#">По типу:</a>
     </li>
-    <li>
+    <li  class="result-selected">
       <a href="#">По рейтингу:</a>
     </li>
   </ul>
-  </section>
   <div> 
   <button type="button">По возрастанию</button>
   <button type="button">По убыванию</button>
-</div>
-  <section>
+  </div>
+  </section>
+  <section class="all-hotels">
     <h2>Список отелей</h2>
-    <ul>
-      <li>
+    <ul class="hotel-list">
+      <li class="hotel-list-items">
         <a href="product.html">
           <h3>Amara Resort & Spa</h3>
           <p><img src="img/AmaraResortSpa.jpg" width="135" height="90" alt="Отель Amara Resort & Spa"></p>
         </a>
         <p>Гостинница</p>
         <p>от 4000 р</p>
-        <a href="#">Подробнее</a>
+        <a class="link-about" href="#">Подробнее</a>
         <p>
-          <button type="button">Забронировать</button>
+          <button  class="book-button" type="button">Забронировать</button>
           <img src="img/4stars.svg" alt="4 звезды">
-          <p>Рейтинг: 8,5</p>
+          <p  class="rating">Рейтинг: 8,5</p>
         </p>
       </li>
-      <li>
+      <li class="hotel-list-items">
         <a href="#">
           <h3>Desert Quail Inn</h3>
           <p><img src="img/DesertQuailInn.jpg" width="135" height="90" alt="Мотель Desert Quail Inn"></p>
         </a>
         <p>Мотель</p>
         <p>от 3000 р</p>
-        <a href="#">Подробнее</a>
+        <a  class="link-about" href="#">Подробнее</a>
         <p>
-          <button type="button">Забронировать</button>
+          <button  class="book-button" type="button">Забронировать</button>
           <img src="img/3stars.svg" alt="3 звезды">
-          <p> Рейтинг: 8,9</p>
+          <p class="rating"> Рейтинг: 8,9</p>
         </p>
       </li>
-      <li>
+      <li class="hotel-list-items">
         <a href="product.html">
           <h3>Villas at Poco Diablo</h3>
           <p><img src="img/VillasatPocoDiablo.jpg" width="135" height="90" alt="Апартаменты Villas at Poco Diablo"></p>
         </a>
         <p>Апартаменты</p>
         <p>от 2000 р</p>
-        <a href="#">Подробнее</a>
+        <a class="link-about" href="#">Подробнее</a>
         <p>
-          <button type="button">Забронировать</button>
+          <button class="book-button" type="button">Забронировать</button>
           <img src="img/2stars.svg" alt="2 звезды">
-          <p> Рейтинг: 9,2</p>
+          <p  class="rating"> Рейтинг: 9,2</p>
         </p>
       </li>
     </ul>
   </section>
 </main>
 
-<footer>
+<footer class="main-footer">
     <section>
       <h2>Как нас найти?</h2>
       <p>#visitSEDONA <br>
