Сетка на гридах для главной страницы

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       </div>
     <section class="reasons">
       <ul class="reasons-list">
-       <li class="reasons-item">
+       <li class="reasons-item blue">
          <h3>Настоящий городок</h3>
          <span> №1 </span>
          <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p> 
@@ -61,23 +61,23 @@
              </li>
           </ul>
         </article>
-       <li  class="reasons-item">
+       <li  class="reasons-item blue">
          <h3>Там есть Мост дьявола</h3>
          <span> №2 </span>
          <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p> 
          <img src="img/devilbridge.png" width="800" height="256" alt="devil-bridge">
        </li>
-       <li  class="reasons-item">
+       <li  class="reasons-item grey">
         <h3>Небольшая площадь</h3>
         <span> №3 </span>
         <p>все достопримечательности находятся очень близко</p> 
       </li>
-      <li  class="reasons-item">
+      <li  class="reasons-item grey">
         <h3>Красивая дорога</h3>
         <span> №4 </span>
         <p>ехать в седону из лас-вегаса совсем не скучно!</p> 
       </li>
-      <li  class="reasons-item">
+      <li  class="reasons-item grey">
         <h3>Мало туристов</h3>
         <span> №5 </span>
         <p>большинство едет в гранд каньон и толпится там</p> 
@@ -114,13 +114,14 @@
        <button class="button-search">Найти</button>
       </form>
     </section>
-    </main>
-  
-  <footer class="main-footer">
-  <section class="map">
+    <section class="map">
     <h2>Здесь будет карта!</h2>
     <img src="img/map.png" width="1199" height="594" alt="Местоположение города Седона">
   </section>
+    </main>
+  
+  <footer class="main-footer">
+  
     <section class="footer-location">
       <h2>Как нас найти?</h2>
       <p>#visitSEDONA <br>
